libdvdnav (0.1.10)
  * filter the symbols that we export.
  * fix LinkNextC assertion failure (fixes LotR-SEE bonus disc image gallery)
  * detect zero stilltime still cells inside PGCs, not only at the end
    (fixes "Red Dragon" RC2 scene selection)

libdvdnav (0.1.9)
  * libdvdnav does not depend on libdvdread any more. It has it's own version.
  * fix some situations where an unlucky user could trigger assertions

libdvdnav (0.1.8)
  * more timing info in cell change event struct
  * documentation review

libdvdnav (0.1.7)
  * fixed a bug in title jumping, where the title number would not be
    converted from TTN to VTS_TTN properly
  * some minor sanity checks added to prevent segfaults

libdvdnav (0.1.6) unstable; urgency=low
  * new event DVDNAV_WAIT to fix consistency problems in applications with fifos
    where libdvdnav is always a bit ahead in the stream, the event forces
    the application to wait for its fifos to get empty
  * correct HIGHLIGHT reporting when a button is activated
  * method to try-run VM operations, now used for safer chapter skipping and menu jumps
  * fixed detection of current PTT to not assume a 1:1 mapping between PTTs and PGs
  * releasing stills when jumping to menu fixes some state inconsistencies
  * do not assume PGs to be physically layed out in sequence on the disc
  * optional PGC based seeking
  * new event on cell changes for timing info

libdvdnav (0.1.5) unstable; urgency=low
  * some bugfixes
  * code cleanup
  * build process polishing
  * more sensible event order in get_next_block to ensure useful event delivery
  * VOBU level resume
  * fixed: seeking in a multiangle feature briefly showed the wrong angle

libdvdnav (0.1.4) unstable; urgency=low
  * more read cache improvements
  * minor fixes for some problematic DVDs

libdvdnav (0.1.3-1) unstable; urgency=low
  * Zero-copy read cache.
  * More support for alternative Menu languages.
